# clarity-agent

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
clarity/: __init__.py  __main__.py  config.py  constants.py
clarity/agents/: __init__.py  analyst.py  base.py  copilot.py  sentinel.py
clarity/api/: __init__.py  server.py
clarity/cli/: __init__.py  app.py
clarity/context/: __init__.py  engine.py  vector_store.py
clarity/core/: __init__.py  audit.py  llm_client.py  models.py
clarity/integrations/: __init__.py  jira.py  report_exporter.py  slack.py
clarity/mcp/: __init__.py  server.py
clarity/parsers/: __init__.py  log_parser.py
clarity_agent/: __init__.py  main.py
clarity_agent/agents/: __init__.py  analyst.py  copilot.py  sentinel.py
clarity_agent/config/: __init__.py  aws_config.py  settings.py
clarity_agent/database/: __init__.py  connection.py  models.py
clarity_agent/mcp_server/: __init__.py  server.py  tools.py
clarity_agent/models/: __init__.py  core.py  monitoring.py
clarity_agent/services/: bedrock.py  bedrock_backup.py
clarity_agent/utils/: __init__.py  logging.py  parsers.py
demo_data/: db_pool_incident.json  deployment_bug.json  memory_leak_incident.json
docs/: api_reference.md  architecture.md  quickstart.md
logs/: config_changes.csv  deployment_logs.json
scripts/: deploy.sh  local-test.sh
tests/: conftest.py  test_analyst.py  test_cli.py  test_copilot.py  test_integration.py  test_jira.py  test_jwt_middleware.py  test_llm_client.py  test_mcp.py  test_models.py  test_parsers.py  test_properties.py  test_report_exporter.py  test_sentinel.py  test_slack.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: AnalysisResults.tsx
web/src/lib/: api.ts  posthog.tsx  types.ts
